update wikipedia viewer and choropleth map

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </a>
             </div>
             <div class='project fadeIn'>
-            <a href="https://codepen.io/FreeCodeCamp/pen/wGqEga">
+            <a href="https://gadenahi.github.io/build_a_wikipedia_viewer/">
                 <img class="project-pic"
-                    src="https://cloud.githubusercontent.com/assets/15967809/17642774/7d091806-6171-11e6-8d47-ecf2f2833fe2.png"
+                    src="./static/wikipedia_viewer.png"
                     alt="project-picture">
                 <div class='mask'>
                     <div class='caption'>Wikipedia Viewer</div>
@@ -80,12 +80,12 @@
             </a>
             </div>
             <div class='project fadeIn'>
-            <a href="https://codepen.io/FreeCodeCamp/pen/KzXQgy">
+            <a href="https://gadenahi.github.io/visualize-data-with-a-choropleth-map/">
                 <img class="project-pic"
-                    src="https://cloud.githubusercontent.com/assets/15967809/17642775/7d354304-6171-11e6-8b56-66eee4681d88.png"
+                    src="./static/choropleth_map.png"
                     alt="project-picture">
                 <div class='mask'>
-                    <div class='caption'>Tic Tac Toe Game</div>
+                    <div class='caption'>Visualize Data with a Choropleth Map</div>
                 </div>
             </a>
             </div>
