removed show all

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
             </a>
             </div>
-            <a id="show_all" class="btn" href="https://codepen.io/FreeCodeCamp/">Show all</a>
+            <!-- <a id="show_all" class="btn" href="https://codepen.io/FreeCodeCamp/">Show all</a> -->
         </section>
         <section id='Skills'>
             <h2 class='sub-title'>Skills</h2>
