added show local weather

--- a/index.html
+++ b/index.html
@@ -85,10 +85,20 @@
                     src="./static/choropleth_map.png"
                     alt="project-picture">
                 <div class='mask'>
-                    <div class='caption'>Visualize Data with a Choropleth Map</div>
+                    <div class='caption'>Visualize Data with<br> a Choropleth Map</div>
                 </div>
             </a>
             </div>
+            <div class='project fadeIn'>
+                <a href="https://gadenahi.github.io/show_the_local_weather/">
+                    <img class="project-pic"
+                        src="./static/local_weather.png"
+                        alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Show local weather</div>
+                    </div>
+                </a>
+                </div>    
             <!-- <a id="show_all" class="btn" href="https://codepen.io/FreeCodeCamp/">Show all</a> -->
         </section>
         <section id='Skills'>
