--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://gadenahi.github.io/pomodoro-clock/">
                     <img class="project-pic" src="./static/pomodoro_clock.png" alt="project-picture">
                     <div class='mask'>
-                        <div class='caption'>Pomodoro　Clock</div>
+                        <div class='caption'>Pomodoro Clock</div>
                     </div>
                 </a>
             </div>
@@ -81,18 +81,34 @@
                 </a>
             </div>
             <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/visualize-data-with-a-choropleth-map/">
-                    <img class="project-pic" src="./static/choropleth_map.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Visualize Data with<br> a Choropleth Map</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
                 <a href="https://gadenahi.github.io/show_the_local_weather/">
                     <img class="project-pic" src="./static/local_weather.png" alt="project-picture">
                     <div class='mask'>
                         <div class='caption'>Show local weather</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://gadenahi.github.io/visualize-data-with-a-choropleth-map/">
+                    <img class="project-pic" src="./static/choropleth_map.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Choropleth Map for <br>US Educational Attainment</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://gadenahi.github.io/visualize-data-with-a-heat-map/">
+                    <img class="project-pic" src="./static/global_land_surface_temp.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Heat Map for <br> Global Land-Surface Temp</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://gadenahi.github.io/visualize_data_with_a_treemap_diagram/">
+                    <img class="project-pic" src="./static/treemap_diagram.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Treemap Diagram for <br> Video Game Sales</div>
                     </div>
                 </a>
             </div>
