--- a/index.html
+++ b/index.html
@@ -41,6 +41,46 @@
         <section id="projects">
             <h2 class='sub-title'>PROJECTS</h2>
             <div class='project fadeIn'>
+                <a href="https://docmanage111.herokuapp.com/">
+                    <img class="project-pic" src="./static/report_shopping_site.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Report shopping site</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://blog-site111.herokuapp.com/">
+                    <img class="project-pic" src="./static/blog_site.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Blog site</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://highlevelwingedcloudcomputing--five-nine.repl.co/">
+                    <img class="project-pic" src="./static/American_british_english_translator.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>American/British<br> English Translator</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://reasonablewobblyfolders--five-nine.repl.co/">
+                    <img class="project-pic" src="./static/sudoku_solver.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Sudoku Solver</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/web_scraping_with_auto_scrolling">
+                    <img class="project-pic" src="./static/web_scraping_for_ces.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Web Scraping for CES</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
                 <a href="https://gadenahi.github.io/pomodoro-clock/">
                     <img class="project-pic" src="./static/pomodoro_clock.png" alt="project-picture">
                     <div class='mask'>
