updated css and html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
-
+<!DOCTYPE html>
+<html lang='en'>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hideaki Portfolio</title>
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
@@ -155,7 +157,7 @@
             </div>
             <!-- <a id="show_all" class="btn" href="https://codepen.io/FreeCodeCamp/">Show all</a> -->
         </section>
-        <section id='Skills'>
+        <section id='skills'>
             <h2 class='sub-title'>Skills</h2>
             <div class='skill fadeIn'>python</div>
             <div class='skill fadeIn'>flask</div>
@@ -189,7 +191,7 @@
             <div class='skill fadeIn'>jupyter notebooks</div>
             <div class='skill fadeIn'>responsive web design</div>
         </section>
-        <section id='Certificates'>
+        <section id='certificates'>
             <h2 class='sub-title'>Certificates</h2>
             <a class="certificate fadeIn ibm"
                 href="https://credentials.edx.org/credentials/d01d1b57330e483da5f6994e03d83b59/">
@@ -312,19 +314,26 @@
                 Google Fundamentals for Azure Professionals: Core Infrastructure(2020)
             </a>
         </section>
-        <section id="Contact">
+        <section id="contact">
             <h2 class='sub-title'>About</h2>
-            <div id="profile-explanation">
-                <p class='fadeIn'>I am a software Engineer having a customer first mind with the background</p>
-                <p class='fadeIn'>of the multiple customer facing roles of Product Management, Product Marketing</p>
-                <p class='fadeIn'>New Business Development and System Engineer. Let's enjoying and challenging</p>
-                <p class='fadeIn'>Software Development with me</p>
+            <div id='profile'>
+                <div id="profile-explanation" class='fadeIn'>
+                    <p>I am a software Engineer having a customer first mind with the background
+                    of the multiple customer facing roles of Product Management, Product Marketing
+                    New Business Development and System Engineer. </p>
+                    <p>Let's enjoying and challenging
+                    Software Development with me</p>
+                </div>
+                <div id='profile-photo' class='fadeIn'>
+                    <a ><img src="./static/test.png" alt="about-photo"></a>
+                </div>
             </div>
-            <a class='fadeIn'><img src="./static/test.png" alt="about-photo"></a>
-            <p class='fadeIn'>Please contact</p>
-            <a href="https://github.com/gadenahi"><img src="./static/GitHub-Mark-64px.png" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/hideaki-nagaya/"><img src="./static/LI-In-Bug.png" alt="Linkedin"
-                    　width="64" height="64"></a>
+            <div class="fadeIn">
+                <p>Please contact</p>
+                <a href="https://github.com/gadenahi"><img src="./static/GitHub-Mark-64px.png" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/hideaki-nagaya/"><img src="./static/LI-In-Bug.png" alt="Linkedin"
+                        　width="64" height="64"></a>
+            </div>
         </section>
     </main>
     <footer>
