--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
 <body>
     <nav id="navbar">
         <ul>
-            <a class="nav-link" href="#Contact">
-                <li>About</li>
-            </a>
             <a class="nav-link" href="#projects">
                 <li>Projects</li>
             </a>
-            <!-- <a class="nav-link" href="#Contact">
-                <li>Contact</li>
-            </a> -->
+            <a class="nav-link" href="#skills">
+                <li>Skills</li>
+            </a>
+            <a class="nav-link" href="#certificates">
+                <li>Certificates</li>
+            </a>
+            <a class="nav-link" href="#contact">
+                <li>About</li>
+            </a>
         </ul>
     </nav>
     <main id="main">
@@ -330,8 +333,8 @@
             </div>
             <div class="fadeIn">
                 <p>Please contact</p>
-                <a href="https://github.com/gadenahi"><img src="./static/GitHub-Mark-64px.png" alt="Github"></a>
-                <a href="https://www.linkedin.com/in/hideaki-nagaya/"><img src="./static/LI-In-Bug.png" alt="Linkedin"
+                <a href="https://github.com/gadenahi" target="_blank"><img src="./static/GitHub-Mark-64px.png" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/hideaki-nagaya/" target="_blank"><img src="./static/LI-In-Bug.png" alt="Linkedin"
                         　width="64" height="64"></a>
             </div>
         </section>
