--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-sm">
+    <nav id='navbar' class="navbar navbar-light navbar-expand-sm">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="responsiveMenu">
-            <ul class="navbar-nav mr-auto">
+        <div id="responsiveMenu" class="collapse navbar-collapse" >
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">
-                        <li>Projects</li>
+                        Projects
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#skills">
-                        <li>Skills</li>
+                        Skills
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#certificates">
-                        <li>Certificates</li>
+                        Certificates
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">
-                        <li>About</li>
+                        About
                     </a>
                 </li>
             </ul>
