--- a/index.html
+++ b/index.html
@@ -84,6 +84,46 @@
                 </a>
             </div>
             <div class='project fadeIn'>
+                <a href="https://dataplatform.cloud.ibm.com/analytics/notebooks/v2/0e4e40b8-806a-4ff9-a870-dce50ffb78fe/view?access_token=5405e90fef91dc0e596e9949b87b54dfbd0ba201c0157cc45e9ca01f11a35788">
+                    <img class="project-pic" src="./static/ds_ml_capstone project.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Data Science<br>Machine Learning<br>Capstone Project</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/neural_network_sms_text_classifier/blob/master/sms_text_classification.ipynb">
+                    <img class="project-pic" src="./static/sms_text_classification.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Neural Network<br>SMS Text Classifier</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/predict_healthcare_costs_using_a_regression_algorithm/blob/master/predict_health_costs_with_regression.ipynb">
+                    <img class="project-pic" src="./static/predict_healthcare_costs.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Predict Healthcare_costs<br>Regression Algorithm</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/book_recommendation_knn/blob/master/book_recommendation_knn.ipynb">
+                    <img class="project-pic" src="./static/book_recommendation_knn.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Book recommendation<br>K-Nearest Neighbors</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/cat_dog_image_classifier/blob/master/cat_dog_image_classifier.ipynb">
+                    <img class="project-pic" src="./static/cat_dog_image_classifier.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Cat/Dog Image Classifier</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
                 <a href="https://reasonablewobblyfolders--five-nine.repl.co/">
                     <img class="project-pic" src="./static/sudoku_solver.png" alt="project-picture">
                     <div class='mask'>
