--- a/index.html
+++ b/index.html
@@ -124,6 +124,22 @@
                 </a>
             </div>
             <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/sea_level_predictor">
+                    <img class="project-pic" src="./static/sea_level_plot.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Sea Level Predictor</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
+                <a href="https://github.com/gadenahi/page_view_time_visualizer">
+                    <img class="project-pic" src="./static/page_view_visualizer_box_plot.png" alt="project-picture">
+                    <div class='mask'>
+                        <div class='caption'>Page View Time Visualizer</div>
+                    </div>
+                </a>
+            </div>
+            <div class='project fadeIn'>
                 <a href="https://reasonablewobblyfolders--five-nine.repl.co/">
                     <img class="project-pic" src="./static/sudoku_solver.png" alt="project-picture">
                     <div class='mask'>
