--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hideaki Portfolio</title>
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127765356-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -23,10 +26,11 @@
 
 <body>
     <nav id='navbar' class="navbar navbar-light navbar-expand-sm">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu"
+            aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="responsiveMenu" class="collapse navbar-collapse" >
+        <div id="responsiveMenu" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">
@@ -50,218 +54,20 @@
                 </li>
             </ul>
         </div>
-      </nav>
+    </nav>
     <main id="main">
         <section id="welcome-section">
             <span id="welcome-hello">Hello Everyone</span>
-            <span>I'am Hideaki.</span>
+            <span>I'am Hideaki</span>
             <span>A Software Engineer</span>
         </section>
         <section id="projects">
             <h2 class='sub-title'>PROJECTS</h2>
-            <div class='project fadeIn'>
-                <a href="https://docmanage111.herokuapp.com/">
-                    <img class="project-pic" src="./static/report_shopping_site.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Report shopping site</div>
-                    </div>
-                </a>
+            <div class="project-btns">
             </div>
-            <div class='project fadeIn'>
-                <a href="https://blog-site111.herokuapp.com/">
-                    <img class="project-pic" src="./static/blog_site.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Blog site</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://highlevelwingedcloudcomputing--five-nine.repl.co/">
-                    <img class="project-pic" src="./static/American_british_english_translator.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>American/British<br> English Translator</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://dataplatform.cloud.ibm.com/analytics/notebooks/v2/0e4e40b8-806a-4ff9-a870-dce50ffb78fe/view?access_token=5405e90fef91dc0e596e9949b87b54dfbd0ba201c0157cc45e9ca01f11a35788">
-                    <img class="project-pic" src="./static/ds_ml_capstone project.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Data Science<br>Machine Learning<br>Capstone Project</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/neural_network_sms_text_classifier/blob/master/sms_text_classification.ipynb">
-                    <img class="project-pic" src="./static/sms_text_classification.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Neural Network<br>SMS Text Classifier</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/predict_healthcare_costs_using_a_regression_algorithm/blob/master/predict_health_costs_with_regression.ipynb">
-                    <img class="project-pic" src="./static/predict_healthcare_costs.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Predict Healthcare_costs<br>Regression Algorithm</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/book_recommendation_knn/blob/master/book_recommendation_knn.ipynb">
-                    <img class="project-pic" src="./static/book_recommendation_knn.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Book recommendation<br>K-Nearest Neighbors</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/cat_dog_image_classifier/blob/master/cat_dog_image_classifier.ipynb">
-                    <img class="project-pic" src="./static/cat_dog_image_classifier.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Cat/Dog Image Classifier</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/sea_level_predictor">
-                    <img class="project-pic" src="./static/sea_level_plot.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Sea Level Predictor</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/page_view_time_visualizer">
-                    <img class="project-pic" src="./static/page_view_visualizer_box_plot.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Page View Time Visualizer</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://reasonablewobblyfolders--five-nine.repl.co/">
-                    <img class="project-pic" src="./static/sudoku_solver.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Sudoku Solver</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://github.com/gadenahi/web_scraping_with_auto_scrolling">
-                    <img class="project-pic" src="./static/web_scraping_for_ces.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Web Scraping for CES</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/pomodoro-clock/">
-                    <img class="project-pic" src="./static/pomodoro_clock.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Pomodoro Clock</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/drum-machine/">
-                    <img class="project-pic" src="./static/drum_machine.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Drum Machine</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/twitch_streamers/">
-                    <img class="project-pic" src="./static/twitch_streamers.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Twitch Streamers</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/js-calculator/">
-                    <img class="project-pic" src="./static/calculator.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Calculator</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/build_a_wikipedia_viewer/">
-                    <img class="project-pic" src="./static/wikipedia_viewer.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Wikipedia Viewer</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/show_the_local_weather/">
-                    <img class="project-pic" src="./static/local_weather.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Show local weather</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/visualize-data-with-a-choropleth-map/">
-                    <img class="project-pic" src="./static/choropleth_map.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Choropleth Map for <br>US Educational Attainment</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/visualize-data-with-a-heat-map/">
-                    <img class="project-pic" src="./static/global_land_surface_temp.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Heat Map for <br> Global Land-Surface Temp</div>
-                    </div>
-                </a>
-            </div>
-            <div class='project fadeIn'>
-                <a href="https://gadenahi.github.io/visualize_data_with_a_treemap_diagram/">
-                    <img class="project-pic" src="./static/treemap_diagram.png" alt="project-picture">
-                    <div class='mask'>
-                        <div class='caption'>Treemap Diagram for <br> Video Game Sales</div>
-                    </div>
-                </a>
-            </div>
-            <!-- <a id="show_all" class="btn" href="https://codepen.io/FreeCodeCamp/">Show all</a> -->
         </section>
         <section id='skills'>
             <h2 class='sub-title'>Skills</h2>
-            <div class='skill fadeIn'>python</div>
-            <div class='skill fadeIn'>flask</div>
-            <div class='skill fadeIn'>javascript</div>
-            <div class='skill fadeIn'>react</div>
-            <div class='skill fadeIn'>redux</div>
-            <div class='skill fadeIn'>node</div>
-            <div class='skill fadeIn'>express</div>
-            <div class='skill fadeIn'>jquery</div>
-            <div class='skill fadeIn'>html</div>
-            <div class='skill fadeIn'>css</div>
-            <div class='skill fadeIn'>scss</div>
-            <div class='skill fadeIn'>bootstrap</div>
-            <div class='skill fadeIn'>mongodb</div>
-            <div class='skill fadeIn'>postgresql</div>
-            <div class='skill fadeIn'>mongoose</div>
-            <div class='skill fadeIn'>sqlalchemy</div>
-            <div class='skill fadeIn'>sql</div>
-            <div class='skill fadeIn'>d3</div>
-            <div class='skill fadeIn'>selenium</div>
-            <div class='skill fadeIn'>pandas</div>
-            <div class='skill fadeIn'>numpy</div>
-            <div class='skill fadeIn'>matplotlib</div>
-            <div class='skill fadeIn'>seaborn</div>
-            <div class='skill fadeIn'>scikit-learn</div>
-            <div class='skill fadeIn'>tensorflow</div>
-            <div class='skill fadeIn'>chai</div>
-            <div class='skill fadeIn'>helmetjs</div>
-            <div class='skill fadeIn'>npm</div>
-            <div class='skill fadeIn'>github</div>
-            <div class='skill fadeIn'>jupyter notebooks</div>
-            <div class='skill fadeIn'>responsive web design</div>
         </section>
         <section id='certificates'>
             <h2 class='sub-title'>Certificates</h2>
@@ -391,20 +197,21 @@
             <div id='profile'>
                 <div id="profile-explanation" class='fadeIn'>
                     <p>I am a software Engineer having a customer first mind with the background
-                    of the multiple customer facing roles of Product Management, Product Marketing
-                    New Business Development and System Engineer. </p>
+                        of the multiple customer facing roles of Product Management, Product Marketing
+                        New Business Development and System Engineer. </p>
                     <p>Let's enjoying and challenging
-                    Software Development with me</p>
+                        Software Development with me</p>
                 </div>
                 <div id='profile-photo' class='fadeIn'>
-                    <a ><img src="./static/test.png" alt="about-photo"></a>
+                    <a><img src="./static/test.png" alt="about-photo"></a>
                 </div>
             </div>
             <div class="fadeIn">
                 <p>Please contact</p>
-                <a href="https://github.com/gadenahi" target="_blank"><img src="./static/GitHub-Mark-64px.png" alt="Github"></a>
-                <a href="https://www.linkedin.com/in/hideaki-nagaya/" target="_blank"><img src="./static/LI-In-Bug.png" alt="Linkedin"
-                        　width="64" height="64"></a>
+                <a href="https://github.com/gadenahi" target="_blank"><img src="./static/GitHub-Mark-64px.png"
+                        alt="Github"></a>
+                <a href="https://www.linkedin.com/in/hideaki-nagaya/" target="_blank"><img src="./static/LI-In-Bug.png"
+                        alt="Linkedin" 　width="64" height="64"></a>
             </div>
         </section>
     </main>
@@ -413,5 +220,8 @@
     </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
 </html>
