moved to data.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/9353b1be6e.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 
 <body>
@@ -204,7 +204,7 @@
                         Software Development with me</p>
                 </div>
                 <div id='profile-photo' class='fadeIn'>
-                    <a><img src="./static/test.png" alt="about-photo"></a>
+                    <a><img src="./static/about.png" alt="about-photo"></a>
                 </div>
             </div>
             <div class="fadeIn">
