added change color

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section id="welcome-section">
             <span id="welcome-hello">Hello Everyone</span>
             <span>I'am Hideaki</span>
-            <span>A Software Engineer</span>
+            <span id="welcome-last">A Software Engineer!</span>
         </section>
         <section id="projects">
             <h2 class='sub-title'>PROJECTS</h2>
